Wed Dec 16 15:19:22 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * tests/RTCORBA/MT_Client_Protocol_Priority/run_test.pl:

          Fuzz fix.

Wed Dec 16 14:18:03 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Notify/Timeout/run_test.pl:
        * orbsvcs/tests/Notify/Bug_2561_Regression/run_test.pl:
        * orbsvcs/tests/Notify/MT_Dispatching/run_test.pl:
        * orbsvcs/tests/Notify/Bug_1385_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Persistent_POA/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646a_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646c_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Reconnecting/run_test.pl:
        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:
        * orbsvcs/tests/Notify/Basic/run_test.pl:
        * orbsvcs/tests/Notify/Structured_Multi_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Sequence_Multi_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Bug_2415_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Blocking/run_test.pl:
        * orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Lanes/run_test.pl:
        * orbsvcs/tests/Notify/Structured_Filter/run_test.pl:
          
          Removed AddLibPath where it isn't needed.

Wed Dec 16 13:03:30 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/tests/Notify/performance-tests/RedGreen/main.cpp:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/RedGreen_Test.cpp:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/run_test.pl:
          Changed the test so that event channel is destroyed before
          orb is shutdown. Removed unnecessary lib pathes from perl script.

Wed Dec 16 11:26:30 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Notify/Ordering/run_test.pl:

          Fuzz fix.

Tue Dec 15 12:20:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>
